# Agentic-AI-Projects

./: main.py
01_DeepResearchAgent/: README.md  pyproject.toml
01_DeepResearchAgent/src/01_deepresearchagent/: __init__.py
DeepResearchAgent/: README.md  pyproject.toml
